<resources>
    <string name="app_name">Lwenzl</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="anmeldung">Anmeldung</string>
    <string name="geburtstag">Geburtstag:</string>
    <string name="name">Name:      </string>
    <string name="adresse">Adresse:   </string>
    <string name="abbruch">Abbruch</string>
    <string name="anmelden">Anmelden</string>
    <string name="tt_mm_jj">TT.MM.JJ</string>
    <string name="tt_mm_jj">TT.MM.JJ</string>
    <string name="adresse2">Adresse</string>
    <string name="name_text">Name</string>
</resources>